# trait-wallet-demo-account

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python_tests.yml  s3_deploy.yml  s3_deploy_staging.yml
aws_s3_assets/game-a/app-agent-a/: app-agent-a.json
aws_s3_assets/game-a/fungible-a-a/: fungible-a-a.json
aws_s3_assets/game-a/fungible-a-b/: fungible-a-b.json
aws_s3_assets/game-a/fungible-a-c/: fungible-a-c.json
aws_s3_assets/game-b/app-agent-b/: app-agent-b.json
aws_s3_assets/game-b/fungible-b-a/: fungible-b-a.json
aws_s3_assets/game-b/fungible-b-b/: fungible-b-b.json
aws_s3_assets/game-c/app-agent-c/: app-agent-c.json
aws_s3_assets/game-c/fungible-c-a/: fungible-c-a.json
aws_s3_assets_staging/game-a/app-agent-a/: app-agent-a.json
aws_s3_assets_staging/game-a/fungible-a-a/: fungible-a-a.json
aws_s3_assets_staging/game-a/fungible-a-b/: fungible-a-b.json
aws_s3_assets_staging/game-a/fungible-a-c/: fungible-a-c.json
aws_s3_assets_staging/game-b/app-agent-b/: app-agent-b.json
aws_s3_assets_staging/game-b/fungible-b-a/: fungible-b-a.json
aws_s3_assets_staging/game-b/fungible-b-b/: fungible-b-b.json
deploy/: .prettierignore  env.example  eslint.config.mjs  index.js  index.ts  package-lock.json  package.json  tsconfig.json
deploy/utils/: app_agent.js  app_agent.ts  datagate.js  datagate.ts  deploy_actions.ts  fungible.js  fungible.ts  game_data.ts  keyless.js  nft.js  nft.ts  types.ts  utils.js  utils.ts
py-tests/: test_consistency.py
scripts/: generate-assets.py  openai-api.py
(+288 files in other folders)
